--- a/Requirements.txt
+++ b/Requirements.txt
@@ -10,6 +10,7 @@ cachetools==4.1.0
 catalogue==1.0.0
 certifi==2020.4.5.1
 chardet==3.0.4
+click==7.1.2
 cycler==0.10.0
 cymem==2.0.3
 decorator==4.4.2
